--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,7 @@
         <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
-            <version>3.1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.synapse</groupId>
-            <artifactId>synapse-core</artifactId>
-            <version>3.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.28</version>
+            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
@@ -41,25 +31,9 @@
             <version>2.5</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-1.2-api</artifactId>
-            <version>2.12.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.12.0</version>
-        </dependency>
-        <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -80,12 +54,13 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
-                        <Embed-Transitive>true</Embed-Transitive>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
-                        <Import-Package>org.osgi.framework.*,org.apache.commons.io.*</Import-Package>
-                        <Export-Package>org.wso2.carbon.eimonitor</Export-Package>
+                        <Private-Package>
+                            org.apache.commons.*
+                        </Private-Package>
+                        <Import-Package>org.osgi.framework.*,org.osgi.service.*</Import-Package>
+                        <Export-Package>org.wso2.carbon.eimonitor.*</Export-Package>
                         <Bundle-Activator>org.wso2.carbon.eimonitor.Activator</Bundle-Activator>
                     </instructions>
                 </configuration>
@@ -94,6 +69,5 @@
 
         </plugins>
     </build>
-
 
 </project>
