Added Factory Classes. Added Singleton patterns.

--- a/src/main/resources/EI_Monitor_Configurations.properties
+++ b/src/main/resources/EI_Monitor_Configurations.properties
@@ -1,8 +1,9 @@
-HEAP_RATIO_THRESHOLD = 0.4
-CPU_RATIO_THRESHOLD = 0.5
-LOAD_AVERAGE_THRESHOLD = 5
-BLOCKED_TIME_THRESHOLD = 0.50
-MONITORING_TIME_PERIOD = 250
-DATA_EXTRACTING_TIME_PERIOD = 250
-DATA_EXTRACTING_COUNT_THRESHOLD = 10
-BASE_DIRECTORY = /home/nipuna/Desktop
+heap.ratio.threshold = 0.50
+cpu.ratio.threshold = 0.50
+load.average.threshold = 7
+blocked.time.threshold = 0.50
+monitoring.time.period = 1000
+data.extracting.time.period = 250
+incident.handler.time.period = 250
+data.extracting.count.threshold = 10
+base.directory = /home/nipuna/Desktop
